# cryptoserve

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  client.py  pyproject.toml  server.py
.github/workflows/: pull_request_template.md  pytest.yml  tests.yml
clients/: client.py
cryptoserve/: client.py  greeting.py  server.py
cryptoserve/exercises/: __init__.py  simple_hash.py
cryptoserve/messaging/: text_menu.py
docs/source/: api.rst  conf.py  connecting_to_server.rst  exercise_reference.rst  exercises.rst  index.rst  protocol.rst
docs/source/contributing/: api.rst  custom_exercises.rst
docs/source/deployment/: docs.rst  server.rst
docs/source/exercises/: diffie_hellman_key_exchange.rst  implementing_aes.rst  listing.rst  red_dog.rst  simple_hash.rst
docs/source/usage/: connecting.rst  protocol.rst
src/cryptoserve/: __init__.py  __main__.py  cli.py  client.py  greeting.py  server.py
src/cryptoserve/exercises/: __init__.py  diffie_hellman_key_exchange.py  errors.py  implementing_aes.py  red_dog.py  simple_hash.py
src/cryptoserve/exercises/primitives/: __init__.py  aes.py
src/cryptoserve/messaging/: __init__.py  client.py  printing.py  text_menu.py
src/cryptoserve/types/: __init__.py  errors.py
tests/: test_hello_world.py  test_mock_client.py  test_simple_hash.py  utils.py
tests/exercises/: __init__.py  test_diffie_hellman.py  test_diffie_hellman_key_exchange.py  test_exploring_aes.py  test_implementing_aes.py  test_red_dog.py  test_simple_hash.py
