[tool.poetry]
name = "Cryptoserve"
version = "0.1.0"
description = "Server software that houses a library of cryptography-related learning exercises."
authors = ["Eric Brown <ebrown5676@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.6"
aes = "^1.2.0"
pycryptodome = "^3.23.0"
rich = "^14.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.2.0"
sphinxcontrib-plantuml = "^0.30"

[tool.poetry.group.tests.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"

[tool.poetry.scripts]
cryptoserve = "cryptoserve.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
